--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "title": "Projectz",
   "name": "projectz",
-  "version": "2.1.0",
+  "version": "2.2.0",
   "description": "Stop wasting time syncing and updating your project's README and Package Files!",
   "homepage": "https://github.com/bevry/projectz",
   "license": "MIT",
@@ -120,47 +120,48 @@
     }
   ],
   "bin": "bin.js",
-  "types": "source/index.ts",
+  "types": "./compiled-types/",
   "type": "commonjs",
   "main": "edition-es2019/index.js",
   "dependencies": {
-    "badges": "^4.2.0",
-    "caterpillar": "^5.1.2",
-    "caterpillar-filter": "^6.0.0",
-    "caterpillar-human": "^6.0.0",
+    "badges": "^4.4.0",
+    "caterpillar": "^5.2.0",
+    "caterpillar-filter": "^6.2.0",
+    "caterpillar-human": "^6.2.0",
     "cson-parser": "^4.0.4",
-    "fellow": "^6.6.0",
-    "get-cli-arg": "^5.0.0",
-    "spdx-expression-parse": "^3.0.0",
+    "fellow": "^6.7.0",
+    "get-cli-arg": "^5.1.0",
+    "spdx-expression-parse": "^3.0.1",
     "spdx-license-list": "^6.2.0",
-    "typechecker": "^6.4.0"
+    "typechecker": "^7.0.0"
   },
   "devDependencies": {
-    "@bevry/update-contributors": "^1.4.0",
-    "@typescript-eslint/eslint-plugin": "^2.31.0",
-    "@typescript-eslint/parser": "^2.31.0",
-    "assert-helpers": "^6.2.0",
+    "@bevry/update-contributors": "^1.5.0",
+    "@typescript-eslint/eslint-plugin": "^2.34.0",
+    "@typescript-eslint/parser": "^2.34.0",
+    "assert-helpers": "^6.4.0",
     "eslint": "^7.0.0",
-    "eslint-config-bevry": "^3.4.0",
+    "eslint-config-bevry": "^3.5.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.3",
-    "kava": "^5.0.0",
+    "kava": "^5.1.0",
     "prettier": "^2.0.5",
-    "safeps": "^9.3.0",
+    "safeps": "^10.0.0",
     "surge": "^0.21.3",
-    "typedoc": "^0.17.6",
-    "typescript": "^3.8.3",
+    "typedoc": "^0.17.7",
+    "typescript": "^3.9.3",
     "valid-directory": "^1.6.0"
   },
   "scripts": {
     "our:clean": "rm -Rf ./docs ./edition* ./es2015 ./es5 ./out ./.next",
-    "our:compile": "npm run our:compile:edition-es2019",
+    "our:compile": "npm run our:compile:edition-es2019 && npm run our:compile:types",
     "our:compile:edition-es2019": "tsc --module commonjs --target ES2019 --outDir ./edition-es2019 --project tsconfig.json && test -d edition-es2019/source && ( mv edition-es2019/source edition-temp && rm -Rf edition-es2019 && mv edition-temp edition-es2019 ) || true",
+    "our:compile:types": "tsc --project tsconfig.json --emitDeclarationOnly --declaration --declarationDir ./compiled-types/ --declarationMap",
     "our:deploy": "echo no need for this project",
     "our:meta": "npm run our:meta:contributors && npm run our:meta:docs && npm run our:meta:projectz",
-    "our:meta:contributors": "npx @bevry/update-contributors",
+    "our:meta:contributors": "update-contributors",
     "our:meta:docs": "npm run our:meta:docs:typedoc",
-    "our:meta:docs:typedoc": "rm -Rf ./docs && npx typedoc --mode file --exclude '**/+(*test*|node_modules)' --excludeExternals --name \"$npm_package_name\" --readme ./README.md --out ./docs ./source",
+    "our:meta:docs:typedoc": "rm -Rf ./docs && typedoc --mode file --exclude '**/+(*test*|node_modules)' --excludeExternals --name \"$npm_package_name\" --readme ./README.md --out ./docs ./source",
     "our:meta:projectz": "npx . compile",
     "our:release": "npm run our:release:prepare && npm run our:release:check-changelog && npm run our:release:check-dirty && npm run our:release:tag && npm run our:release:push",
     "our:release:check-changelog": "cat ./HISTORY.md | grep v$npm_package_version || (echo add a changelog entry for v$npm_package_version && exit -1)",
@@ -171,11 +172,10 @@
     "our:setup": "npm run our:setup:install",
     "our:setup:install": "npm install",
     "our:test": "npm run our:verify && npm test",
-    "our:verify": "npm run our:verify:directory && npm run our:verify:eslint && npm run our:verify:prettier && npm run our:verify:typescript",
-    "our:verify:directory": "npx valid-directory",
-    "our:verify:eslint": "npx eslint --fix --ignore-pattern '**/*.d.ts' --ignore-pattern '**/vendor/' --ignore-pattern '**/node_modules/' --ext .mjs,.js,.jsx,.ts,.tsx ./source",
-    "our:verify:prettier": "npx prettier --write .",
-    "our:verify:typescript": "npx tsc --noEmit --project tsconfig.json",
+    "our:verify": "npm run our:verify:directory && npm run our:verify:eslint && npm run our:verify:prettier",
+    "our:verify:directory": "valid-directory",
+    "our:verify:eslint": "eslint --fix --ignore-pattern '**/*.d.ts' --ignore-pattern '**/vendor/' --ignore-pattern '**/node_modules/' --ext .mjs,.js,.jsx,.ts,.tsx ./source",
+    "our:verify:prettier": "prettier --write .",
     "test": "node ./edition-es2019/test.js"
   },
   "eslintConfig": {
