--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "title": "Projectz",
   "name": "projectz",
-  "version": "2.2.0",
+  "version": "2.3.0",
   "description": "Stop wasting time syncing and updating your project's README and Package Files!",
   "homepage": "https://github.com/bevry/projectz",
   "license": "MIT",
@@ -124,39 +124,39 @@
   "type": "commonjs",
   "main": "edition-es2019/index.js",
   "dependencies": {
-    "badges": "^4.4.0",
-    "caterpillar": "^5.2.0",
-    "caterpillar-filter": "^6.2.0",
-    "caterpillar-human": "^6.2.0",
+    "badges": "^4.5.0",
+    "caterpillar": "^5.3.0",
+    "caterpillar-filter": "^6.3.0",
+    "caterpillar-human": "^6.3.0",
     "cson-parser": "^4.0.4",
-    "fellow": "^6.7.0",
-    "get-cli-arg": "^5.1.0",
+    "fellow": "^6.8.0",
+    "get-cli-arg": "^5.2.0",
     "spdx-expression-parse": "^3.0.1",
     "spdx-license-list": "^6.2.0",
-    "typechecker": "^7.0.0"
+    "typechecker": "^7.2.0"
   },
   "devDependencies": {
-    "@bevry/update-contributors": "^1.5.0",
+    "@bevry/update-contributors": "^1.6.0",
     "@typescript-eslint/eslint-plugin": "^2.34.0",
     "@typescript-eslint/parser": "^2.34.0",
-    "assert-helpers": "^6.4.0",
+    "assert-helpers": "^6.5.0",
     "eslint": "^7.0.0",
-    "eslint-config-bevry": "^3.5.0",
+    "eslint-config-bevry": "^3.6.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.3",
-    "kava": "^5.1.0",
+    "kava": "^5.2.0",
     "prettier": "^2.0.5",
-    "safeps": "^10.0.0",
+    "safeps": "^10.1.0",
     "surge": "^0.21.3",
     "typedoc": "^0.17.7",
     "typescript": "^3.9.3",
-    "valid-directory": "^1.6.0"
+    "valid-directory": "^2.0.0"
   },
   "scripts": {
     "our:clean": "rm -Rf ./docs ./edition* ./es2015 ./es5 ./out ./.next",
     "our:compile": "npm run our:compile:edition-es2019 && npm run our:compile:types",
-    "our:compile:edition-es2019": "tsc --module commonjs --target ES2019 --outDir ./edition-es2019 --project tsconfig.json && test -d edition-es2019/source && ( mv edition-es2019/source edition-temp && rm -Rf edition-es2019 && mv edition-temp edition-es2019 ) || true",
-    "our:compile:types": "tsc --project tsconfig.json --emitDeclarationOnly --declaration --declarationDir ./compiled-types/ --declarationMap",
+    "our:compile:edition-es2019": "tsc --module commonjs --target ES2019 --outDir ./edition-es2019 --project tsconfig.json && ( test ! -d edition-es2019/source || ( mv edition-es2019/source edition-temp && rm -Rf edition-es2019 && mv edition-temp edition-es2019 ) )",
+    "our:compile:types": "tsc --project tsconfig.json --emitDeclarationOnly --declaration --declarationMap --declarationDir ./compiled-types && ( test ! -d compiled-types/source || ( mv compiled-types/source edition-temp && rm -Rf compiled-types && mv edition-temp compiled-types ) )",
     "our:deploy": "echo no need for this project",
     "our:meta": "npm run our:meta:contributors && npm run our:meta:docs && npm run our:meta:projectz",
     "our:meta:contributors": "update-contributors",
