--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "title": "Projectz",
   "name": "projectz",
-  "version": "2.7.0",
+  "version": "2.8.0",
   "description": "Stop wasting time syncing and updating your project's README and Package Files!",
   "homepage": "https://github.com/bevry/projectz",
   "license": "MIT",
@@ -124,34 +124,50 @@
   "type": "commonjs",
   "main": "edition-es2019/index.js",
   "dependencies": {
-    "badges": "^4.9.0",
-    "caterpillar": "^5.6.0",
-    "caterpillar-filter": "^6.6.0",
-    "caterpillar-human": "^6.6.0",
+    "badges": "^4.11.0",
+    "caterpillar": "^5.8.0",
+    "caterpillar-filter": "^6.8.0",
+    "caterpillar-human": "^6.8.0",
     "cson-parser": "^4.0.4",
-    "fellow": "^6.11.0",
-    "get-cli-arg": "^5.5.0",
+    "fellow": "^6.12.0",
+    "get-cli-arg": "^5.6.0",
     "spdx-expression-parse": "^3.0.1",
     "spdx-license-list": "^6.2.0",
-    "typechecker": "^7.5.0"
-  },
-  "devDependencies": {
-    "@bevry/update-contributors": "^1.9.0",
-    "@typescript-eslint/eslint-plugin": "^3.2.0",
-    "@typescript-eslint/parser": "^3.2.0",
-    "assert-helpers": "^6.8.0",
-    "eslint": "^7.2.0",
-    "eslint-config-bevry": "^3.9.0",
+    "typechecker": "^7.6.0",
+    "@bevry/update-contributors": "^1.10.0",
+    "@typescript-eslint/eslint-plugin": "^3.3.0",
+    "@typescript-eslint/parser": "^3.3.0",
+    "assert-helpers": "^6.10.0",
+    "eslint": "^7.3.0",
+    "eslint-config-bevry": "^3.10.0",
     "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-prettier": "^3.1.3",
-    "kava": "^5.5.0",
-    "make-deno-edition": "^0.3.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "kava": "^5.6.0",
+    "make-deno-edition": "^0.9.0",
     "prettier": "^2.0.5",
-    "safeps": "^10.4.0",
+    "safeps": "^10.5.0",
     "surge": "^0.21.3",
     "typedoc": "^0.17.7",
     "typescript": "^3.9.5",
-    "valid-directory": "^2.3.0"
+    "valid-directory": "^2.4.0"
+  },
+  "devDependencies": {
+    "@bevry/update-contributors": "^1.10.0",
+    "@typescript-eslint/eslint-plugin": "^3.3.0",
+    "@typescript-eslint/parser": "^3.3.0",
+    "assert-helpers": "^6.10.0",
+    "eslint": "^7.3.0",
+    "eslint-config-bevry": "^3.10.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "kava": "^5.6.0",
+    "make-deno-edition": "^0.9.0",
+    "prettier": "^2.0.5",
+    "safeps": "^10.5.0",
+    "surge": "^0.21.3",
+    "typedoc": "^0.17.7",
+    "typescript": "^3.9.5",
+    "valid-directory": "^2.4.0"
   },
   "scripts": {
     "our:clean": "rm -Rf ./docs ./edition* ./es2015 ./es5 ./out ./.next",
