--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "title": "Projectz",
   "name": "projectz",
-  "version": "2.10.0",
+  "version": "2.10.1",
   "description": "Stop wasting time syncing and updating your project's README and Package Files!",
   "homepage": "https://github.com/bevry/projectz",
   "license": "MIT",
@@ -76,6 +76,7 @@
   "contributors": [
     "Benjamin Lupton <b@lupton.cc> (https://github.com/balupton)",
     "James George <jamesgeorge998001@gmail.com> (https://github.com/jamesgeorge007)",
+    "Oliver Lorenz (https://github.com/oliverlorenz)",
     "Peter Chanthamynavong <peterkc@gmail.com> (https://github.com/peterkc)",
     "Peter Flannery (https://github.com/pflannery)",
     "Rob Loach <robloach@gmail.com> (https://github.com/RobLoach)",
@@ -124,31 +125,31 @@
   "type": "commonjs",
   "main": "edition-es2019/index.js",
   "dependencies": {
-    "badges": "^4.9.0",
-    "caterpillar": "^5.6.0",
-    "caterpillar-filter": "^6.6.0",
-    "caterpillar-human": "^6.6.0",
+    "badges": "^4.13.0",
+    "caterpillar": "^5.10.0",
+    "caterpillar-filter": "^6.10.0",
+    "caterpillar-human": "^6.10.0",
     "cson-parser": "^4.0.4",
     "errlop": "^3.9.0",
-    "fellow": "^6.11.0",
-    "get-cli-arg": "^5.5.0",
+    "fellow": "^6.14.0",
+    "get-cli-arg": "^5.8.0",
     "spdx-expression-parse": "^3.0.1",
     "spdx-license-list": "^6.2.0",
-    "typechecker": "7.5.0"
+    "typechecker": "7.9.0"
   },
   "devDependencies": {
-    "@bevry/update-contributors": "^1.9.0",
-    "@typescript-eslint/eslint-plugin": "^3.3.0",
-    "@typescript-eslint/parser": "^3.3.0",
-    "assert-helpers": "^6.8.0",
-    "eslint": "^7.3.0",
-    "eslint-config-bevry": "^3.8.0",
-    "eslint-config-prettier": "^6.7.0",
+    "@bevry/update-contributors": "^1.12.0",
+    "@typescript-eslint/eslint-plugin": "^3.4.0",
+    "@typescript-eslint/parser": "^3.4.0",
+    "assert-helpers": "^6.12.0",
+    "eslint": "^7.3.1",
+    "eslint-config-bevry": "^3.12.0",
+    "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.4",
     "kava": "^5.7.0",
-    "make-deno-edition": "^0.9.1",
+    "make-deno-edition": "^0.11.1",
     "prettier": "^2.0.5",
-    "safeps": "^10.4.0",
+    "safeps": "^10.9.0",
     "surge": "^0.21.3",
     "typedoc": "^0.17.7",
     "typescript": "^3.9.5",
