--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
     "maxNodeModuleJsDepth": 5,
     "moduleResolution": "Node",
     "strict": true,
-    "target": "ESNext",
+    "target": "ES2019",
     "module": "ESNext"
   },
   "include": ["source"]
