--- a/package.json
+++ b/package.json
@@ -163,6 +163,7 @@
     "eslint-config-bevry": "^3.19.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.4",
+    "filedirname": "^2.2.0",
     "kava": "^5.11.0",
     "make-deno-edition": "^1.0.0",
     "prettier": "^2.0.5",
